# Example schema for simple movie review app

# User table is keyed by Firebase Auth UID.
type User @table {
  # `@default(expr: "auth.uid")` sets it to Firebase Auth UID during insert and upsert.
  id: String! @default(expr: "auth.uid")
  email: String! @col(dataType: "varchar(50)")
  username: String! @col(dataType: "varchar(50)")
  photoUrl: String! @col(dataType: "varchar(2048)")
  role: String! @default(value: "CITIZEN") @col(dataType: "varchar(20)")
  fcmToken: String @col(dataType: "varchar(512)")
}

type Category @table {
  id: String! @col(dataType: "varchar(50)")
  name: String!
  iconName: String!
  pinColor: String!
}

type Report @table {
  id: UUID! @default(expr: "uuidV4()")
  user: User!
  category: Category!
  description: String
  latitude: Float!
  longitude: Float!
  status: String! @default(value: "NOWE") @col(dataType: "varchar(50)")
  createdAt: Timestamp! @default(expr: "request.time")
}

type ReportPhoto @table {
  id: UUID! @default(expr: "uuidV4()")
  report: Report!
  imageUrl: String! @col(dataType: "varchar(2048)")
}
type Upvote @table{
  id: UUID! @default(expr: "uuidV4()")
  report: Report!
  user: User!
}
type Comment @table{
  id: UUID! @default(expr: "uuidV4()")
  report:Report!
  user: User!
  content: String! @col(dataType: "varchar(1000)")
  createdAt: Timestamp! @default (expr: "request.time")
}
